# Mango-Software-Renderer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  camera.h  display.sh  drawing.h  framedata.h  main.c  obj_parser.h  output.tga  shapes.h  tga.h
Mango/: CMakeCache.txt  CMakeLists.txt
Mango/src/Mango/: mango.c  mango.h
Mango/src/Mango/game/: animation.c  animation.h  camera.c  camera.h  gameobject.c  gameobject.h  material.h  scene.c  scene.h
Mango/src/Mango/math/: geometry.c  geometry.h  mat4.c  mat4.h  plane.c  plane.h  real.c  real.h  shader_math.c  shader_math.h  vec2.c  vec2.h  vec3.c  vec3.h  vec4.c  vec4.h
Mango/src/Mango/mesh/: obj_parser.c  obj_parser.h
Mango/src/Mango/render/: display_SDL.c  display_SDL.h  display_rvc.c  display_rvc.h  drawing.c  drawing.h  framedata.c  framedata.h  linked_list.c  linked_list.h  material.c  material.h  sdf.c  sdf.h  texture.c  texture.h
Mango/src/Mango/shaders/: sdf.c  sdf.h  shader.c  shader.h  ubo.h
Mango/src/Mango/system/: real.c  real.h  system.c  system.h
cartrige/: CMakeLists.txt  main.c  main.s
cartrige/src/: interrupt.s  startup.c
example/: main.c
example/assets/atlas_model/: Atlas.mtl
example/models/: Wheatley.fbx  spider.h  wheatly.mtl
example/textures/: tex_head_diffuse.h  tex_head_nm.h
fbx_loader/: CMakeLists.txt
game/: CMakeLists.txt  riscv32-console.ld
game/models/: cube.c  cube.h
game/src/: crt0.s  cube.h  interrupt.s  main.c  system3.s  system7.s
game/src/group11/: interrupt.s
game/src/group7/: syscalls.s  threading.s
game/src/models/: cube.c
gameobject/: camera.h  transform.h
loader/: main.cc
math/: geometry.h  linear_algebra.h  mat4x4.h  vec2.h  vec3.h  vec3i.h  vec4.h
models/: cube.blend  cube.fbx  head_rotated.mtl  light_box.mtl
native/: main.c
native/models/: spider.h
output/: output.tga
src/: animation.c  animation.h  drawing.h  loader.cc  main.c  obj_parser.c  obj_parser.h  tga.h
src/game/: animation.h  camera.c  camera.h  gameobject.c  gameobject.h  scene.c  scene.h
src/gameobject/: camera.c  camera.h  scene.c  scene.h  transform.c  transform.h
src/math/: geometry.c  geometry.h  mat4.c  mat4.h  mat4x4.c  mat4x4.h  plane.c  vec2.c  vec2.h  vec3.c  vec3.h  vec4.c  vec4.h
src/mesh/: mesh.c  mesh.h  obj_parser.c  obj_parser.h
src/models/: spider.c  spider.h
src/render/: drawing.c  drawing.h  framedata.c  framedata.h  tga.c  tga.h
src/shaders/: shader.c  shader.h
texture_loader/: CMakeLists.txt
texture_loader/src/: main.c
